# sandworm-ai-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  package.json  pyproject.toml  ruff.toml  test_intent.sh
src/: __main__.py
src/config/: settings.py
src/example_tools/: example.csv
src/models/: base.py
src/prompts/: title.py  visualizaion.py
src/prompts/blocks/: markdown.py  pythons.py  sql.py  title.py  visualizaion.py
src/prompts/types/: index.py
src/providers/: openrouter.py
src/services/: completion.py  document_title.py  title.py
src/services/block_action/: model.py  prompts.py  service.py
src/services/block_planner/: models.py  prompts.py  service.py
src/services/chat_title/: prompts.py  service.py
src/services/code/: prompts.py  service.py
src/services/completions/: models eee.py  models.py  service.py
src/services/document_title/: prompts.py  service.py
src/services/intent/: __init__.py  models.py  prompts.py  service.py
src/services/markdown/: prompts.py  service.py
src/services/notebook_context/: models.py  service.py
src/services/notebook_events/: listener.py  models.py
src/services/pipeline/: service.py
src/services/sandworm_tools/: models.py  service.py
src/services/select_tool/: models.py  service.py
src/services/sql/: prompts.py  service.py
src/services/title/: service.py
src/services/tools/: models.py
src/util/: cache.py  qdrant.py  redis_client.py  seed_tools.py
src/web/middleware/: auth.py
src/web/routes/chat/: __init__.py  completions.py  messages.py  (+4 more)
(+12 files in other folders)
