[project]
name = "sandworm-ai-service"
version = "0.1.0"
description = "AI execution service for Sandworm blockchain analytics notebooks"
authors = [
    {name = "Sandworm Devs",email = "dev@sandwormlabs.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
