[tool.poetry]
name = "sandworm-ai-service"
version = "0.1.0"
description = "AI execution service for Sandworm blockchain analytics notebooks"
authors = ["Sandworm Devs <dev@sandwormlabs.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.*, <3.13"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
python-dotenv = "^1.0.1"
litellm = "^1.75.2"
pydantic-settings = "^2.5.2"
orjson = "^3.11.5"
httpx = "^0.28.0"
aiohttp = {extras = ["speedups"], version = "^3.13.4"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
pre-commit = "^4.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"